# pdfdateextract

./: README.md  pdfdateextract.tmpl  pyproject.toml
.github/workflows/: cleanup-old-runs.yml  cleanup-releases.yml  release.yml
.skel/: formula.rb
src/pdfdateextract/: _util.py  extract_date.py  main.py
tests/: test_extract_date.py
